<resources>
    <string name="app_name">MyActivities</string>

    <string name="label_full_name">Full name</string>
    <string name="label_phone">Phone</string>
    <string name="label_email">Email</string>
    <string name="label_description">Description</string>
    <string name="label_next">Next</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_OK">OK</string>
    <string name="label_set_birthdate">Set Date of Birth</string>

    <string name="label_confirm_data">Confirm Data</string>
    <string name="label_birthdate">Birthdate</string>
    <string name="label_edit_data">Edit Data</string>

    <string name="msg_invalid_fields">Invalid Fields</string>
</resources>